I chnaged the hover color and some color background to avoid color contrast.

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -39,7 +39,6 @@ nav {
 .menu-1 {
     display: none;
     flex-direction: column;
-    background-color: rgb(46, 46, 82);
     position: absolute;
     top: 60px;
     right: 0;
@@ -58,7 +57,7 @@ nav {
 }
 
 .menu-1 a:hover {
-    color: rgb(245, 187, 187);
+    color: rgb(135, 244, 157);
 }
 
 #menu {
